added pkg `xcolor'

--- a/pkg.tex
+++ b/pkg.tex
@@ -11,6 +11,7 @@
 \usepackage{marvosym}               % euro symbol
 \usepackage[margin=2cm]{geometry}   % border width
 \usepackage{fancyhdr}
+\usepackage[dvipsnames]{xcolor}     % some predefined colors
 \usepackage{xspace}                 % intelligent trailing white-space
 \usepackage{emptypage}              % Suppress page numbers and headings on empty pages
 \usepackage{subcaption}             % Used for subcaptions and subfigures.
