color for strings in listing

--- a/lst.tex
+++ b/lst.tex
@@ -10,6 +10,7 @@
   basicstyle=\small\ttfamily,
   keywordstyle=\color{Blue}\bfseries,
   commentstyle=\color{OliveGreen}\itshape,
+  stringstyle=\color{Orange},
   keepspaces,
   mathescape,
   escapeinside={``}{''}
