commented language-specific pkgs out

--- a/pkg.tex
+++ b/pkg.tex
@@ -3,11 +3,11 @@
 \usepackage{lmodern}                % Latin Modern Font
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}         % Special Chars
-\usepackage[german]{babel}          % typographical and hyphenation rules
+%\usepackage[german]{babel}          % typographical and hyphenation rules
 \usepackage[babel]{csquotes}        % context-sensitive quotation
 \usepackage[]{microtype}            % general appearance of text
 
-\usepackage[german]{isodate}        % date formatting
+%\usepackage[german]{isodate}        % date formatting
 \usepackage{marvosym}               % euro symbol
 \usepackage[margin=2cm]{geometry}   % border width
 \usepackage{fancyhdr}
