added commands for Copyright and Registered

--- a/cmd.tex
+++ b/cmd.tex
@@ -2,3 +2,6 @@
 
 \newcommand{\TODO}[1]{\textbf{\textcolor{red}{#1}}}
 \newcommand{\Sub}[1]{\textsubscript{#1}\xspace}
+
+\newcommand{\Reg}{\textsuperscript{\textregistered}\xspace}
+\newcommand{\Copy}{\textsuperscript{\textcopyright}\xspace}
