added pkg enumitem: modifiable enumerations

--- a/pkg.tex
+++ b/pkg.tex
@@ -19,6 +19,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}                % Math symbols
 \usepackage{amsthm}                 % Theorem typesetting
+\usepackage{enumitem}               % modifiable enumerations
 
 \usepackage{tikz}
 \usetikzlibrary{calc,shadows,snakes,arrows,decorations,shapes,matrix,chains,positioning,scopes,backgrounds}
