pkg geometry: dont use margin but top,left, right; bottom seems to bugged or interfere with another setting

--- a/pkg.tex
+++ b/pkg.tex
@@ -9,7 +9,7 @@
 
 %\usepackage[german]{isodate}        % date formatting
 \usepackage{marvosym}               % euro symbol
-\usepackage[margin=2cm]{geometry}   % border width
+\usepackage[top=2cm,left=2cm,right=2cm]{geometry}   % border width
 \usepackage{fancyhdr}
 \usepackage[dvipsnames]{xcolor}     % some predefined colors
 \usepackage{xspace}                 % intelligent trailing white-space
