added missing package `subscript`

--- a/pkg.tex
+++ b/pkg.tex
@@ -20,6 +20,7 @@
 \usepackage{amssymb}                % Math symbols
 \usepackage{amsthm}                 % Theorem typesetting
 \usepackage{enumitem}               % modifiable enumerations
+\usepackage{subscript}              % \textsubscript (like textsuperscript)
 
 \usepackage{tikz}
 \usetikzlibrary{calc,shadows,snakes,arrows,decorations,shapes,matrix,chains,positioning,scopes,backgrounds}
