added some packages

--- a/pkg.tex
+++ b/pkg.tex
@@ -31,3 +31,6 @@
 \usepackage{lstautogobble}          % smart indent, no trailing newline
 \usepackage[plain]{fancyref}        % provides \fref and \Fref for referencing
 \usepackage{hyperref}               % for URLs and other links
+\usepackage{booktabs}               % adds some rulers (toprule, midrule, bottomrule)
+\usepackage{makecell}               % lets one custimize tabulars
+\usepackage{multirow}               % similar to multicolumn, for tabular environments
