don't use packages with project specific settings; added pkg for customizing the ToC

--- a/pkg.tex
+++ b/pkg.tex
@@ -3,13 +3,10 @@
 \usepackage{lmodern}                % Latin Modern Font
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}         % Special Chars
-%\usepackage[german]{babel}          % typographical and hyphenation rules
 \usepackage[babel]{csquotes}        % context-sensitive quotation
 \usepackage[]{microtype}            % general appearance of text
 
-%\usepackage[german]{isodate}        % date formatting
 \usepackage{marvosym}               % euro symbol
-\usepackage[top=2cm,left=2cm,right=2cm]{geometry}   % border width
 \usepackage{fancyhdr}
 \usepackage[dvipsnames]{xcolor}     % some predefined colors
 \usepackage{xspace}                 % intelligent trailing white-space
@@ -34,3 +31,15 @@
 \usepackage{booktabs}               % adds some rulers (toprule, midrule, bottomrule)
 \usepackage{makecell}               % lets one custimize tabulars
 \usepackage{multirow}               % similar to multicolumn, for tabular environments
+\usepackage{tocloft}                % allows customizing the ToC
+
+
+%===============================================================================
+%
+%   Packages that are useful, but should be used by the parent project directly
+%
+%===============================================================================
+
+%\usepackage[top=2cm,left=2cm,right=2cm]{geometry}
+%\usepackage[german]{babel}          % typographical and hyphenation rules
+%\usepackage[german]{isodate}        % date formatting
