--- a/pkg.tex
+++ b/pkg.tex
@@ -32,6 +32,7 @@
 \usepackage{makecell}               % lets one custimize tabulars
 \usepackage{multirow}               % similar to multicolumn, for tabular environments
 \usepackage{tocloft}                % allows customizing the ToC
+\usepackage{mathtools}              % math tools for amsmath
 
 
 %===============================================================================
