more useful packages

--- a/pkg.tex
+++ b/pkg.tex
@@ -6,6 +6,9 @@
 \usepackage[babel]{csquotes}        % context-sensitive quotation
 \usepackage[]{microtype}            % general appearance of text
 
+\usepackage{wrapfig}                % wrapfigure
+\usepackage{titlesec}
+\usepackage{datetime}
 \usepackage{marvosym}               % euro symbol
 \usepackage{fancyhdr}
 \usepackage[dvipsnames]{xcolor}     % some predefined colors
@@ -33,6 +36,10 @@
 \usepackage{multirow}               % similar to multicolumn, for tabular environments
 \usepackage{tocloft}                % allows customizing the ToC
 \usepackage{mathtools}              % math tools for amsmath
+
+\usepackage{wasysym}                % more symbols
+\usepackage{marvosym}               % more symbols
+\usepackage{textcomp}               % more symbols
 
 
 %===============================================================================
