--- a/pkg.tex
+++ b/pkg.tex
@@ -27,6 +27,7 @@
 
 \usepackage{varwidth}               % like minipage, but fits its content
 \usepackage{tabu}                   % smart tabular (also for math-mode)
+\usepackage{tabularx}               % highly customizable tabular
 \usepackage{listings}
 \usepackage{lstautogobble}          % smart indent, no trailing newline
 \usepackage[plain]{fancyref}        % provides \fref and \Fref for referencing
