added pkg for algorithm

--- a/pkg.tex
+++ b/pkg.tex
@@ -37,6 +37,8 @@
 \usepackage{multirow}               % similar to multicolumn, for tabular environments
 \usepackage{tocloft}                % allows customizing the ToC
 \usepackage{mathtools}              % math tools for amsmath
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 
 \usepackage{wasysym}                % more symbols
 \usepackage{marvosym}               % more symbols
