added lastpage pkg

--- a/pkg.tex
+++ b/pkg.tex
@@ -21,6 +21,7 @@
 \usepackage{amsthm}                 % Theorem typesetting
 \usepackage{enumitem}               % modifiable enumerations
 \usepackage{subscript}              % \textsubscript (like textsuperscript)
+\usepackage{lastpage}               % for \pageref{LastPage}
 
 \usepackage{tikz}
 \usetikzlibrary{calc,shadows,snakes,arrows,decorations,shapes,matrix,chains,positioning,scopes,backgrounds}
