added framed pkg for framebox environments

--- a/pkg.tex
+++ b/pkg.tex
@@ -40,6 +40,7 @@
 \usepackage{mathtools}              % math tools for amsmath
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{framed}                 % framebox environments
 
 \usepackage{wasysym}                % more symbols
 \usepackage{marvosym}               % more symbols
