--- a/cmd.tex
+++ b/cmd.tex
@@ -2,6 +2,7 @@
 
 \newcommand{\TODO}[1]{\textbf{\textcolor{red}{#1}}}
 \newcommand{\Sub}[1]{\textsubscript{#1}\xspace}
+\newcommand{\Sup}[1]{\textsuperscript{#1}\xspace}
 
 \newcommand{\Reg}{\textsuperscript{\textregistered}\xspace}
 \newcommand{\Copy}{\textsuperscript{\textcopyright}\xspace}
