added math symbol libraries

--- a/pkg.tex
+++ b/pkg.tex
@@ -19,6 +19,8 @@
 \usepackage{amsmath}
 \usepackage{amssymb}                % Math symbols
 \usepackage{amsthm}                 % Theorem typesetting
+\usepackage{stmaryrd}               % Math symbols
+\usepackage{bbm}                    % Math symbols
 \usepackage{enumitem}               % modifiable enumerations
 \usepackage{subscript}              % \textsubscript (like textsuperscript)
 \usepackage{lastpage}               % for \pageref{LastPage}
