sort tikzlibraries alphabetically; added arrows.meta for curly arrows

--- a/pkg.tex
+++ b/pkg.tex
@@ -26,7 +26,20 @@
 \usepackage{lastpage}               % for \pageref{LastPage}
 
 \usepackage{tikz}
-\usetikzlibrary{calc,shadows,snakes,arrows,decorations,shapes,matrix,chains,positioning,scopes,backgrounds}
+\usetikzlibrary{
+    arrows,
+    arrows.meta,
+    backgrounds,
+    calc,
+    chains,
+    decorations,
+    matrix,
+    positioning,
+    scopes,
+    shadows,
+    shapes,
+    snakes,
+}
 
 \usepackage{varwidth}               % like minipage, but fits its content
 \usepackage{tabu}                   % smart tabular (also for math-mode)
