--- a/cmd.tex
+++ b/cmd.tex
@@ -1,6 +1,6 @@
 % vim: set nospell:
 
-\newcommand{\TODO}[1]{\textbf{\textcolor{red}{#1}}}
+\newcommand{\TODO}[1]{\textbf{\textcolor{red}{TODO: #1}}}
 \newcommand{\Sub}[1]{\textsubscript{#1}\xspace}
 \newcommand{\Sup}[1]{\textsuperscript{#1}\xspace}
 
