--- a/pkg.tex
+++ b/pkg.tex
@@ -22,6 +22,7 @@
 \usepackage{hyperref}               % for URLs and other links
 \usepackage{isodate}                % date formatting
 \usepackage{lastpage}               % for \pageref{LastPage}
+\usepackage{letltxmacro}            % provides \LetLtxMacro to override commands safely
 \usepackage{lipsum}                 % print Lorem ipsum with \lipsum
 \usepackage{listings}
 \usepackage{lmodern}                % Latin Modern Font
