added \TM for trademark symbol

--- a/cmd.tex
+++ b/cmd.tex
@@ -6,6 +6,7 @@
 
 \newcommand{\Reg}{\textsuperscript{\textregistered}\xspace}
 \newcommand{\Copy}{\textsuperscript{\textcopyright}\xspace}
+\newcommand{\TM}{\textsuperscript{TM}\xspace}
 
 % Multiline cell inside a tabular
 \newcommand{\multiline}[2][c]{%
