rewrite Registered/Copyright/Trademark commands to use \Sup; use \texttrademark for TM

--- a/cmd.tex
+++ b/cmd.tex
@@ -4,9 +4,9 @@
 \newcommand{\Sub}[1]{\textsubscript{#1}\xspace}
 \newcommand{\Sup}[1]{\textsuperscript{#1}\xspace}
 
-\newcommand{\Reg}{\textsuperscript{\textregistered}\xspace}
-\newcommand{\Copy}{\textsuperscript{\textcopyright}\xspace}
-\newcommand{\TM}{\textsuperscript{TM}\xspace}
+\newcommand{\Reg}{\Sup{\textregistered}}
+\newcommand{\Copy}{\Sup{\textcopyright}}
+\newcommand{\TM}{\Sup{\texttrademark}}
 
 % Multiline cell inside a tabular
 \newcommand{\multiline}[2][c]{%
