added theorem environments

--- a/pkg.tex
+++ b/pkg.tex
@@ -7,6 +7,7 @@
 \usepackage[utf8]{inputenc}         % special chars
 \usepackage{algorithm}
 \usepackage{algpseudocode}          % pseudo code with algorithmicx environment
+\usepackage{aliascnt}               % theorem environments that can be referenced
 \usepackage{amsmath}
 \usepackage{amssymb}                % Math symbols
 \usepackage{amsthm}                 % Theorem typesetting
