--- a/defs.tex
+++ b/defs.tex
@@ -1,21 +1,27 @@
 % vim: set nospell:
 
+% theorem environments
+\newtheorem{theorem}{Theorem}[section]
+\newaliascnt{lemma}{theorem}
+\newtheorem{lemma}[lemma]{Lemma}
+\aliascntresetthe{lemma}
+
 % references
-\AtBeginDocument{\def\equationautorefname{Equation}}
-\AtBeginDocument{\def\figureautorefname{Figure}}
-\AtBeginDocument{\def\subfigureautorefname{Figure}}
-\AtBeginDocument{\def\defnautorefname{Definition}}
-\AtBeginDocument{\def\Itemautorefname{Item}}
-\AtBeginDocument{\def\tableautorefname{Table}}
-\AtBeginDocument{\def\sectionautorefname{Section}}
-\AtBeginDocument{\def\subsectionautorefname{Section}}
-\AtBeginDocument{\def\subsubsectionautorefname{Section}}
-\AtBeginDocument{\def\chapterautorefname{Chapter}}
-\AtBeginDocument{\def\partautorefname{Part}}
-\AtBeginDocument{\def\algorithmautorefname{Algorithm}}
-\AtBeginDocument{\def\lemmaautorefname{Lemma}}
-\AtBeginDocument{\def\theoremautorefname{Theorem}}
-\AtBeginDocument{\def\definitionautorefname{Definition}}
+\providecommand*\equationautorefname{Equation}
+\providecommand*\figureautorefname{Figure}
+\providecommand*\subfigureautorefname{Figure}
+\providecommand*\defnautorefname{Definition}
+\providecommand*\Itemautorefname{Item}
+\providecommand*\tableautorefname{Table}
+\providecommand*\sectionautorefname{Section}
+\providecommand*\subsectionautorefname{Section}
+\providecommand*\subsubsectionautorefname{Section}
+\providecommand*\chapterautorefname{Chapter}
+\providecommand*\partautorefname{Part}
+\providecommand*\algorithmautorefname{Algorithm}
+\providecommand*\lemmaautorefname{Lemma}
+\providecommand*\theoremautorefname{Theorem}
+\providecommand*\definitionautorefname{Definition}
 
 % tabular row height
 \renewcommand{\arraystretch}{1.5}
