--- a/defs.tex
+++ b/defs.tex
@@ -7,21 +7,23 @@
 \aliascntresetthe{lemma}
 
 % references
-\providecommand*\equationautorefname{Equation}
-\providecommand*\figureautorefname{Figure}
-\providecommand*\subfigureautorefname{Figure}
-\providecommand*\defnautorefname{Definition}
-\providecommand*\Itemautorefname{Item}
-\providecommand*\tableautorefname{Table}
-\providecommand*\sectionautorefname{Section}
-\providecommand*\subsectionautorefname{Section}
-\providecommand*\subsubsectionautorefname{Section}
-\providecommand*\chapterautorefname{Chapter}
-\providecommand*\partautorefname{Part}
-\providecommand*\algorithmautorefname{Algorithm}
-\providecommand*\lemmaautorefname{Lemma}
-\providecommand*\theoremautorefname{Theorem}
-\providecommand*\definitionautorefname{Definition}
+\AtBeginDocument{
+    \def\equationautorefname{Equation}
+    \def\figureautorefname{Figure}
+    \def\subfigureautorefname{Figure}
+    \def\defnautorefname{Definition}
+    \def\Itemautorefname{Item}
+    \def\tableautorefname{Table}
+    \def\sectionautorefname{Section}
+    \def\subsectionautorefname{Section}
+    \def\subsubsectionautorefname{Section}
+    \def\chapterautorefname{Chapter}
+    \def\partautorefname{Part}
+    \def\algorithmautorefname{Algorithm}
+    \def\lemmaautorefname{Lemma}
+    \def\theoremautorefname{Theorem}
+    \def\definitionautorefname{Definition}
+}
 
 % tabular row height
 \renewcommand{\arraystretch}{1.5}
