Added geometry package.  Use `\geometry{}' to modify the sizes.

--- a/pkg.tex
+++ b/pkg.tex
@@ -20,6 +20,7 @@
 \usepackage{fancyhdr}
 \usepackage{float}                  % Introduces the boxed float, the ruled float and the plaintop float
 \usepackage{framed}                 % framebox environments
+\usepackage{geometry}
 \usepackage{hyperref}               % for URLs and other links
 \usepackage{isodate}                % date formatting
 \usepackage{lastpage}               % for \pageref{LastPage}
