Replace package "framed" by "mdframed".  Add package "multicol".

--- a/pkg.tex
+++ b/pkg.tex
@@ -19,7 +19,7 @@
 \usepackage{enumitem}               % modifiable enumerations
 \usepackage{fancyhdr}
 \usepackage{float}                  % Introduces the boxed float, the ruled float and the plaintop float
-\usepackage{framed}                 % framebox environments
+\usepackage{mdframed}               % framebox environments
 \usepackage{geometry}
 \usepackage{hyperref}               % for URLs and other links
 \usepackage{isodate}                % date formatting
@@ -33,6 +33,7 @@
 \usepackage{marvosym}               % euro symbol
 \usepackage{marvosym}               % more symbols
 \usepackage{mathtools}              % math tools for amsmath
+\usepackage{multicol}               % for multicol environment and \twocolumn pages
 \usepackage{multirow}               % similar to multicolumn, for tabular environments
 \usepackage{stmaryrd}               % Math symbols
 \usepackage{subcaption}             % Used for subcaptions and subfigures.
