--- a/defs.tex
+++ b/defs.tex
@@ -1,10 +1,10 @@
 % vim: set nospell:
 
 % theorem environments
-\newtheorem{theorem}{Theorem}[section]
-\newaliascnt{lemma}{theorem}
-\newtheorem{lemma}[lemma]{Lemma}
-\aliascntresetthe{lemma}
+%\newtheorem{theorem}{Theorem}[section]
+%\newaliascnt{lemma}{theorem}
+%\newtheorem{lemma}[lemma]{Lemma}
+%\aliascntresetthe{lemma}
 
 % references
 \AtBeginDocument{
