--- a/lst.tex
+++ b/lst.tex
@@ -3,15 +3,15 @@
 \lstset{
   autogobble=true,
   numbers=left,
-  numberstyle=\footnotesize\ttfamily,
+  numberstyle=\tiny\ttfamily,
   numbersep=8pt,
   xleftmargin=3em,
   columns=fixed,
-  basicstyle=\small\ttfamily,
+  basicstyle=\footnotesize\ttfamily,
   keywordstyle=\color{Blue}\bfseries,
   commentstyle=\color{OliveGreen}\itshape,
   stringstyle=\color{Orange},
   keepspaces,
   mathescape,
-  escapeinside={(*@}{@*)}
+  escapeinside={`}{`}
 }
