--- a/pkg.tex
+++ b/pkg.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}         % special chars
 \usepackage[]{microtype}            % general appearance of text
 \usepackage[babel]{csquotes}        % context-sensitive quotation
-\usepackage[dvipsnames]{xcolor}     % some predefined colors
+%\usepackage[dvipsnames]{xcolor}     % some predefined colors
 \usepackage[plain]{fancyref}        % provides \fref and \Fref for referencing
 \usepackage[T1]{fontenc}
 \usepackage{algorithm}
@@ -42,8 +42,8 @@
 \usepackage{tabu}                   % smart tabular (also for math-mode)
 \usepackage{textcomp}               % more symbols
 \usepackage{tikz}
-\usepackage{titlesec}               % customize chapter/section title formatting
-\usepackage{tocloft}                % allows customizing the ToC
+%\usepackage{titlesec}               % customize chapter/section title formatting
+%\usepackage{tocloft}                % allows customizing the ToC
 \usepackage{varwidth}               % like minipage, but fits its content
 \usepackage{wasysym}                % more symbols
 \usepackage{wrapfig}                % wrapfigure
@@ -57,6 +57,7 @@
     chains,
     decorations,
     decorations.pathreplacing,
+    fit,
     matrix,
     positioning,
     scopes,
