Add ifsym package.

--- a/pkg.tex
+++ b/pkg.tex
@@ -32,6 +32,7 @@
 \usepackage{makecell}               % lets one custimize tabulars
 \usepackage{marvosym}               % euro symbol
 \usepackage{marvosym}               % more symbols
+\usepackage{ifsym}                  % geometric shapes
 \usepackage{mathtools}              % math tools for amsmath
 \usepackage{multicol}               % for multicol environment and \twocolumn pages
 \usepackage{multirow}               % similar to multicolumn, for tabular environments
