Remove the optional counter for theorems.  If you want to specify the counter explicitly, use \numberwithin{<name>}{<counter>}.

--- a/defs.tex
+++ b/defs.tex
@@ -1,7 +1,7 @@
 % vim: set nospell:
 
 % theorem environments
-\newtheorem{theorem}{Theorem}[section]
+\newtheorem{theorem}{Theorem}
 \newaliascnt{lemma}{theorem}
 \newtheorem{lemma}[lemma]{Lemma}
 \aliascntresetthe{lemma}
