Set theorem style.

--- a/defs.tex
+++ b/defs.tex
@@ -1,6 +1,7 @@
 % vim: set nospell:
 
 % theorem environments
+\theoremstyle{definition}
 \newtheorem{theorem}{Theorem}
 \newaliascnt{lemma}{theorem}
 \newtheorem{lemma}[lemma]{Lemma}
