Add definition environment.

--- a/defs.tex
+++ b/defs.tex
@@ -3,6 +3,7 @@
 % theorem environments
 \theoremstyle{definition}
 \newtheorem{theorem}{Theorem}
+\newtheorem{definition}{Definition}
 \newaliascnt{lemma}{theorem}
 \newtheorem{lemma}[lemma]{Lemma}
 \aliascntresetthe{lemma}
