Count Lemmas independent from Theorems.

--- a/defs.tex
+++ b/defs.tex
@@ -4,9 +4,7 @@
 \theoremstyle{definition}
 \newtheorem{theorem}{Theorem}
 \newtheorem{definition}{Definition}
-\newaliascnt{lemma}{theorem}
-\newtheorem{lemma}[lemma]{Lemma}
-\aliascntresetthe{lemma}
+\newtheorem{lemma}{Lemma}
 
 % references
 \AtBeginDocument{
