Add QUESTION command.

--- a/cmd.tex
+++ b/cmd.tex
@@ -11,3 +11,5 @@
 % Multiline cell inside a tabular
 \newcommand{\multiline}[2][c]{%
   \begin{tabular}[#1]{@{}l@{}}#2\end{tabular}}
+
+\newcommand{\QUESTION}[1]{\textbf{\textcolor{green}{Q: #1}}}
