Add TIKZ library `decorations.markings`.

--- a/pkg.tex
+++ b/pkg.tex
@@ -57,6 +57,7 @@
     calc,
     chains,
     decorations,
+    decorations.markings,
     decorations.pathreplacing,
     matrix,
     positioning,
