Add TikZ libraries for fitting and patterns.

--- a/pkg.tex
+++ b/pkg.tex
@@ -59,7 +59,9 @@
     decorations,
     decorations.markings,
     decorations.pathreplacing,
+    fit,
     matrix,
+    patterns,
     positioning,
     scopes,
     shadows,
